# CMakeList.txt: projeto de CMake para SOM1, incluir origem e definir
# lógica específica a um projeto aqui.
#
cmake_minimum_required (VERSION 3.8)

# Adicione a origem ao executável deste projeto.
add_executable (SOM1 "SOM1.cpp" "SOM1.h" "Exemplo1.cpp")

# TODO: Adicione testes e instale destinos, se necessário.
